glFusion ChangeLog

v1.1.9
------
- What's New block now uses <ul> class list-new-articles for stories (Mark)
- Modified LDAP class so filter variable is now a configuration option (Mark)
- Media Gallery: Enable full screen playback with FlowPlayer by default (Mark)
- Modified My Account block to use blockheader-list templates. Removed
  the hard coded <ul> / </ul> in code.  (Mark)
- Added new block option: login_block, admin can now specify custom block
  template for login block (see theme's functions.php) (Mark)
- Calendar: Add configuration option to select which blocks display (Mark)
- FileMgmt: Add configuration option to select which blocks display (Mark)
- Links: Add configuration option to select which blocks display (Mark)
- Polls: Add configuration option to select which blocks display (Mark)
- New BBCode editor API (Mark)
- New Environment Check option in Command & Control Screen. Removed PHP info
  link from MG admin screen (Mark)
- New Admin Global User Preference Editor - allows admin to change some
  preferences for all users (Mark)
- Admin user editor now supports editing all user attributes (Mark)
- Feature to allow groups be applied for all new users (Mark)
- Media Gallery: Updated Polish translations (Mark)
- Forum: Implemented user option to enable / disable WYSIWYG editor (Mark)
- Yet another fix to the ATOM webservices publishing code (Mark)
- Improved error detection on file uploads - ensure proper errors are
  reported (Mark)
- Fixed namespace conflicts with DokuWiki 2.0 plugin (Mark)
- Complete implementation of PLG_getItemInfo for each bundled plugin. (Mark)
- Forum: Implemented merge topic feature (Mark)
- Forum: Rewrote the moderation system to be more procedural. This will
  help with future enhancements to moderation features (Mark)
- Forum: Site Members report did not honor Forum Activity checkbox (Mark)
- Forum: Implemented per topic options (Disable BBCode, Disable Smilies,
  Disable URL Parse) (Mark)